--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,27 @@
   flex-direction: column;
   text-align: center;
 }
+
 .lang {
   width: 50px;
   margin: 10px;
   cursor: pointer;
+}
+
+.text {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.mainTxt {
+  font-size: 5rem;
+  width: 70%;
+  letter-spacing: 10px;
+  padding: 10px;
+  border: 3px solid white;
+  overflow: hidden;
+  box-shadow: 15px 15px 0px 0px rgb(145, 145, 145);
+
 }
