--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -2,19 +2,15 @@ h1 {
     font-size: 15vmin;
 }
 
-body {
-    font-family: var(--font-family);
-    font-weight: normal;
-    background: var(--surface-ground);
-    color: var(--text-color);
-    padding: 1rem;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-}
-
 .card {
     background: var(--surface-card);
+    color: rgb(61, 59, 59);
     padding: 2rem;
     border-radius: 10px;
     margin-bottom: 1rem;
+    font-family: var(--font-family);
+    font-weight: normal;
+    padding: 1rem;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
