--- a/src/App.css
+++ b/src/App.css
@@ -25,5 +25,11 @@
   border: 3px solid white;
   overflow: hidden;
   box-shadow: 15px 15px 0px 0px rgb(145, 145, 145);
-
+}
+.logo {
+  margin: 10px;
+  float: left;
+  width: 50px;
+  height: 50px;
+  border-radius: 10px;
 }
