--- a/src/App.css
+++ b/src/App.css
@@ -18,13 +18,14 @@
 }
 
 .mainTxt {
-  font-size: 5rem;
+  font-size: 4rem;
   width: 70%;
   letter-spacing: 10px;
   padding: 10px;
   border: 3px solid white;
   overflow: hidden;
   box-shadow: 15px 15px 0px 0px rgb(145, 145, 145);
+  margin-bottom: 10vh;
 }
 .logo {
   margin: 10px;
@@ -32,4 +33,7 @@
   width: 50px;
   height: 50px;
   border-radius: 10px;
+}
+.black {
+  height: 100vh;
 }
